# IconMagic

./: .gitignore  CMakeLists.txt  IconMagic.cbp  IconMagic.depend  IconMagic.layout  README.md  out.txt
App/: IconMagicCache.txt  regout.fullsave-withvalues.txt  regout.fullsave.txt  regout.save.txt  regout.txt  sol2.txt
App/doc/html/: _icon_magic_8cpp.html  _icon_magic_8hpp.html  _icon_magic_8hpp_source.html  _registry_history_8cpp.html  _registry_history_8hpp.html  _registry_history_8hpp_source.html  _registry_history_test_8cpp.html  _registry_history_test_8hpp_source.html  _registry_manager_8cpp.html  _registry_manager_8hpp.html  _registry_manager_8hpp_source.html  _system_validation_8cpp.html  _system_validation_8hpp.html  _system_validation_8hpp_source.html  _testing_8cpp.html  _testing_8hpp.html  _testing_8hpp_source.html  _text_u_i_8cpp.html  _text_u_i_8hpp.html  _text_u_i_8hpp_source.html  _windows_toolbox_8cpp.html  _windows_toolbox_8hpp.html  _windows_toolbox_8hpp_source.html  annotated.html  class_extension_entry-members.html  class_extension_entry.html  class_image_entry-members.html  class_image_entry.html  class_registry_history-members.html  class_registry_history.html  class_registy_manager.html  class_test_framework-members.html  class_test_framework.html  classes.html  dir_31ab6032b600f9631d22fcb032eed2c0.html  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_a27bd4abf91d14a28bec9ddc47a09d9b.html  dir_a6af817f1d1e0896eb6dec5dc64a280f.html  files.html  framework_8cpp.html  (+9 more)
App/documentation/html/: _direct_registry_access_8cpp.html  _direct_registry_access_8hpp.html  _direct_registry_access_8hpp_source.html  _extension_history_8hpp_source.html  _icon_magic_8cpp.html  _icon_magic_8hpp.html  _icon_magic_8hpp_source.html  _image_entry_8cpp.html  _image_entry_8hpp.html  _image_entry_8hpp_source.html  _key_path_8cpp.html  _key_path_8hpp.html  _key_path_8hpp_source.html  _key_service_8cpp.html  _key_service_8hpp.html  _key_service_8hpp_source.html  _manager_8cpp.html  _manager_8hpp.html  _manager_8hpp_source.html  _menu_8hpp_source.html  _menu_factory_8hpp_source.html  _menu_manager_8hpp_source.html  _registry_access_exception_8cpp.html  _registry_access_exception_8hpp.html  _registry_access_exception_8hpp_source.html  _registry_history_8cpp.html  _registry_history_8hpp_source.html  _registry_history_test_8cpp.html  _registry_history_test_8hpp_source.html  _registry_scanner_8hpp_source.html  _scan_tool_8hpp_source.html  _simple_registry_access_8cpp.html  _simple_registry_access_8hpp.html  _simple_registry_access_8hpp_source.html  _system_validation_8cpp.html  _system_validation_8hpp.html  _system_validation_8hpp_source.html  _testing_8cpp.html  _testing_8hpp.html  _testing_8hpp_source.html  (+82 more)
App/documentation/latex/: _direct_registry_access_8cpp.tex  _direct_registry_access_8hpp.tex  _icon_magic_8cpp.tex  _icon_magic_8hpp.tex  _image_entry_8cpp.tex  _image_entry_8hpp.tex  _key_path_8cpp.tex  _key_path_8hpp.tex  _key_service_8cpp.tex  _key_service_8hpp.tex  _manager_8cpp.tex  _manager_8hpp.tex  _registry_access_exception_8cpp.tex  _registry_access_exception_8hpp.tex  _registry_history_8cpp.tex  _registry_history_test_8cpp.tex  _simple_registry_access_8cpp.tex  _system_validation_8cpp.tex  (+65 more)
Source/: IconMagic.cpp  IconMagic.hpp  RegistryHistory.cpp  RegistryHistory.hpp  RegistyManager.cpp  RegistyManager.hpp  SystemValidation.cpp  SystemValidation.hpp  Testing.cpp  Testing.hpp  TextUI.cpp  TextUI.hpp  WindowsToolbox.cpp  WindowsToolbox.hpp  main.cpp
Source/autoversion/: version.h
Source/doc/: index.hpp  license.hpp
Source/main/: IconMagic.hpp  Manager.cpp  Manager.hpp  RegistryHistory.cpp  RegistryHistory.hpp  RegistryManager.cpp  RegistyManager.cpp  TextUI.hpp  Util.cpp  Util.hpp  WindowsToolbox.cpp  WindowsToolbox.hpp
Source/test/: RegistryHistoryTest.cpp  RegistryHistoryTest.hpp  Testing.cpp  framework.cpp  framework.hpp
doc/html/: _icon_magic_8cpp.html  _icon_magic_8hpp_source.html  _registry_history_8cpp.html  _registry_history_8hpp_source.html  _registy_manager_8cpp.html  _registy_manager_8hpp.html  _registy_manager_8hpp_source.html  _system_validation_8cpp.html  _system_validation_8hpp_source.html  _testing_8cpp.html  _testing_8hpp.html  _testing_8hpp_source.html  _text_u_i_8cpp.html  _text_u_i_8hpp.html  _text_u_i_8hpp_source.html  _windows_toolbox_8hpp_source.html  annotated.html  class_extension_entry-members.html  class_extension_entry.html  class_image_entry-members.html  class_image_entry.html  class_registry_history-members.html  class_registry_history.html  class_registy_manager.html  classes.html  dir_31ab6032b600f9631d22fcb032eed2c0.html  dir_74389ed8173ad57b461b9d623a1f3867.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  version_8h_source.html
doc/latex/: _icon_magic_8cpp.tex  _icon_magic_8hpp.tex  _registry_history_8cpp.tex  _registry_history_8hpp.tex  _registy_manager_8cpp.tex  _registy_manager_8hpp.tex  _system_validation_8cpp.tex  _system_validation_8hpp.tex  _testing_8cpp.tex  _testing_8hpp.tex  _text_u_i_8cpp.tex  _text_u_i_8hpp.tex  _windows_toolbox_8cpp.tex  _windows_toolbox_8hpp.tex  annotated.tex  class_extension_entry.tex  class_image_entry.tex  class_registry_history.tex  class_registy_manager.tex  dir_31ab6032b600f9631d22fcb032eed2c0.tex  dir_74389ed8173ad57b461b9d623a1f3867.tex  files.tex  main_8cpp.tex  refman.tex
(+120 files in other folders)
